--- a/css/olStyle.css
+++ b/css/olStyle.css
@@ -1,5 +1,5 @@
 div.olMap {
-    z-index: 0;
+    z-index: 1;
     padding: 0 !important;
     margin: 0 !important;
     cursor: default;
@@ -12,71 +12,6 @@ div.olMapViewport {
 div.olLayerDiv {
    -moz-user-select: none;
    -khtml-user-select: none;
-}
-
-#logo{
-    position:absolute; 
-    left:320px; 
-    top:16px; 
-    z-index:20000; 
-    width:200px; 
-    height:50px; 
-	color:rgba(85,118,161,1.0);
-	font-family:Arial;
-	font-weight:bold;
-	font-size:18px;
-	text-shadow: 0px 0px 2px white;
-	line-height:103%;
-}
-
-#credit{
-    position:absolute; 
-    left:320px; 
-    top:51px; 
-    z-index:20001; 
-    width:160px; 
-    height:50px; 
-	color:rgba(0,0,0,1.0);
-	font-family:Courier New;
-	font-size:11px;
-	text-shadow: 0px 0px 2px white;
-	text-decoration:none;
-}
-
-#leadAdd {
-	position:absolute; 
-	left:318px; 
-	top:70px; 
-	z-index:19000; 
-    background: rgba(255,255,255,0.4);
-    border-radius: 4px;
-    padding: 1px 2px;
-	height: 26px;
-    width:110px;
-}
-#leadAddText {
-    position:absolute; 
-	left:321px; 
-	top:73px; 
-	z-index:19001; 
-	border-radius: 4px;
-	display: block;
-    margin: 0px;
-    padding: 1px 4px;
-    color: white;
-    font-size: 18px;
-    font-family: Arial;
-	font-style:Italic;
-    font-weight: bold;
-	font-size: 14px;
-    text-decoration: none;
-    text-align: center;
-    height: 20px;
-    width:100px;
-    line-height: 19px;
-    background: #130085; /* fallback for IE - IE6 requires background shorthand*/
-    background: rgba(0, 60, 136, 0.5);
-    filter: alpha(opacity=80);
 }
 
 a {
@@ -103,6 +38,7 @@ a {
     bottom: 3px;
     position: absolute;
     display: block;
+	z-index: 0;
 }
 .olControlScale {
     right: 3px;
@@ -202,6 +138,7 @@ div.olControlMousePosition {
 .olPopupContent {
     padding:5px;
     overflow: auto;
+	border-radius:8px !important;
 }
 
 .olControlNavigationHistory {
@@ -327,7 +264,7 @@ div.olControlSaveFeaturesItemInactive {
 }
 
 .olPopupCloseBox {
-  background: url("img/close.gif") no-repeat;
+  background: url("../../ext-3.4.0/resources/images/wireframe/qtip/close.gif") no-repeat !important;
   cursor: pointer;
 }
 
@@ -519,18 +456,18 @@ div.olControlZoom a {
     height: 22px;
     width:22px;
     line-height: 19px;
-    background: #130085; /* fallback for IE - IE6 requires background shorthand*/
-    background: rgba(0, 60, 136, 0.5);
+    background: #A8A8A8; /* fallback for IE - IE6 requires background shorthand*/
+    background: rgba(144, 144, 144, 0.7) !important;
     filter: alpha(opacity=80);
 }
 div.olControlZoom a:hover {
-    background: #130085; /* fallback for IE */
-    background: rgba(0, 60, 136, 0.7);
+    background: #787878; /* fallback for IE */
+    background: rgba(72, 72, 72, 0.7) !important;
     filter: alpha(opacity=100);
 }
 @media only screen and (max-width: 600px) {
     div.olControlZoom a:hover {
-        background: rgba(0, 60, 136, 0.5);
+        background: rgba(72, 72, 72, 0.7) !important;
     }
 }
 a.olControlZoomIn {
