--- a/css/olStyle.css
+++ b/css/olStyle.css
@@ -33,11 +33,13 @@ a {
     bottom: 15px !important;
 }
 .olControlAttribution {
-    font-size: smaller;
+    font-size: medium;
+	color: #101010;
     right: 3px;
     bottom: 3px;
     position: absolute;
     display: block;
+	text-shadow: 0px 0px 2px #ffffff;
 }
 .olControlScale {
     right: 3px;
