--- a/css/olStyle.css
+++ b/css/olStyle.css
@@ -494,16 +494,34 @@ a.olControlZoomOut {
 /**
  * Popups
  */
-.popupLeadTitle {
-	font-size: 14px;
-	font-weight: bold;
-	width: 220px;
-	padding-bottom: 3px;
-}
-.popupLeadDetails {
+.popupLead{
 	overflow-y: auto !important;
 	width: 250px !important;
-	height: 160px !important;
+	height: auto !important;
+}
+.popupLeadCount{
+	font-size: 12px;
+	font-weight: bold !important;
+	color: #404040;
+}
+.popupLeadList {
+	font-size: 10px;
+	color: #909090;
+}
+}.popupLeadTitle {
+	font-size: 12px !important;
+	font-weight: bold !important;
+	text-decoration: none !important;
+	width: 220px !important;
+	padding-bottom: 3px !important;
+}
+.popupLeadSummary {
+	padding-right: 5px !important;
+	padding-bottom: 5px !important;
+	font-size: 10px;
+	color: #202020;
+}
+.popupLeadDetails {
 	padding-right: 5px !important;
 	font-size: 10px;
 	color: #202020;
@@ -511,18 +529,20 @@ a.olControlZoomOut {
 .olPopupContent {
     padding:5px;
     overflow-y: scroll;
-	border: 0.5px solid #c0c0c0;;
+	border: 0.5px solid #c0c0c0;
 }
 .olPopupCloseBox {
   background: url("../../lib/ext-3.4.0/resources/images/wireframe/qtip/close.gif") no-repeat !important;
   cursor: pointer !important;
-  right: 18px !important;
+  right: 2px !important;
 }
 .olFramedCloudPopupContent {
     padding: 0px;
-    overflow-y: visible !important;
-	left: 18px !important;
+    left: 18px !important;
 	width: 250px !important; 
 }
-
-
+#addBtn {
+	font-size: 13px !important;
+	font-weight: bold !important;
+	font-style: italic !important;
+}
