CSS changes for search panel

--- a/css/bids.css
+++ b/css/bids.css
@@ -73,9 +73,9 @@ a:active {
 	padding-left: 15px !important;
 	width: 0px !important;
 }
-#ext-comp-1011 {
+/*#ext-comp-1011 {
 	width: 285px !important;
-}
+}*/
 .popupLeadTitle {
 	font-size: 14px;
 	font-weight: bold !important;
