Building landing page (#91)
Just the building blocks...

--- a/css/ez.css
+++ b/css/ez.css
@@ -806,4 +806,4 @@ h3 {
     margin: 0px 5px 0px 16px; }
 
   .container .content .aggregate .aggregate_by ul {
-    padding-top: 12px; } }
+    padding-top: 12px; }
