Add a Lead Issues Fixed (#106, #111)

--- a/css/bids.css
+++ b/css/bids.css
@@ -188,7 +188,7 @@ h5 {
 
 h6 {
   font: 12px Arial,Helvetica,sans-serif;
-  color: #001c50;
+  color: #202020;
   margin: 6px 0px 1px 0px; }  
 
  p {
