--- a/css/bids.css
+++ b/css/bids.css
@@ -100,7 +100,14 @@ a:active {
 }
 
 
-html, body {height: 100%; margin: 0px; padding: 0px;}
+html, body {
+	height: 100%; 
+	margin: 0px; 
+	padding: 0px;
+	min-width:925px;
+	width: auto !important;  /* Firefox will set width as auto */
+	width:925px;             /* As IE ignores !important it will set width as 1000px; */
+}
 
 #wrap {
 	min-height: 100%;
@@ -214,63 +221,18 @@ body:before {
 }
 
 #wrap #header {
-  padding-top: 40px;
-  padding-bottom: 20px;
-  height: 60px; 
-  border-bottom-width:1px;
-  border-bottom-style:solid;
-  border-bottom-color:#c0c0c0; }
-  #wrap #header a.logo {
+	padding-bottom: 20px;
+	height: 100px; 
+	border-bottom-width:1px;
+	border-bottom-style:solid;
+	border-bottom-color:#c0c0c0;
+	padding-left: 134px;
+	padding-right: 60px;
+}
+#wrap #header a.logo {
     float: left; }
-  #wrap #header .nav {
-    padding: 0px 0px 0px 0px;
-    margin: 0;
-    list-style: none;
-    height: 35px;
-    display: inline-block;
-    float: right; }
-  #wrap #header .nav a {
-    display: block;
-    width: auto;
-    padding: 11.5px 8px;
-    color: white;
-    font: 15px Arial,Helvetica,sans-serif;
-    background-color: #C0C0C0;
-    text-decoration: none; }
-  #wrap #header .nav a:hover {
-    background-color: #FF9933; }
-  #wrap #header .nav li {
-    float: right;
-    margin: 0px 0px 0px 8px; }
-  #wrap #header .nav li:first-child {}
-	.row {
-  max-width: 1240px;
-  min-width: 753px;
-  margin: 0px -12px 0px 165px;
-  padding: 0px 20px;
-  min-height: 5px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-	
   
-  
-  
-    #wrap .nav {
-    padding: 0;
-    margin: 14px 0px 0px 0px;
-    list-style: none;
-    height: 26px;
-    display: inline-block;
-    max-width: 734px;
-    /*li ul.sector {
-        width: 50%;
-        float: left;
-        label {
-            max-width: 197px;
-        }
-    }*/ }
-    #wrap .nav a {
+#wrap .nav a {
       display: block;
       width: auto;
       padding: 7px 36px 8px 6px;
@@ -320,7 +282,7 @@ body:before {
     #wrap .nav li.clear:hover {
       -webkit-box-shadow: none;
       box-shadow: none; }
-      #wrap .nav li.clear:hover a {
+    #wrap .nav li.clear:hover a {
         border-bottom: none; }
     #wrap .nav li div {
       position: absolute;
@@ -371,60 +333,6 @@ body:before {
       right: 0px; }
     #wrap .nav li ul.md {
       width: 490px; }
-    #wrap .nav li.inv-country {
-      width: 141px; }
-      #wrap .nav li.inv-country div {
-        width: 141px; }
-        #wrap .nav li.inv-country div span {
-          width: 139px; }
-    #wrap .nav li.sector {
-      width: 80px; }
-      #wrap .nav li.sector div {
-        width: 516px; }
-        #wrap .nav li.sector div span {
-          width: 78px; }
-        #wrap .nav li.sector div ul {
-          width: 50%;
-          float: left;
-          border-left: 1px solid #A7A9AC; }
-          #wrap .nav li.sector div ul label {
-            width: 100%; }
-        #wrap .nav li.sector div ul.noborder {
-          border-left: none; }
-    #wrap .nav li.function {
-      width: 92px; }
-      #wrap .nav li.function div {
-        width: 280px; }
-        #wrap .nav li.function div span {
-          width: 90px; }
-    #wrap .nav li.revenue {
-      width: 146px; }
-      #wrap .nav li.revenue div {
-        width: 232px; }
-        #wrap .nav li.revenue div span {
-          width: 144px; }
-    #wrap .nav li.years {
-      width: 69px; }
-      #wrap .nav li.years div {
-        width: 105px; }
-        #wrap .nav li.years div span {
-          width: 67px; }
-    #wrap .nav li.state {
-      width: 73px; }
-      #wrap .nav li.state div {
-        width: 495px; }
-        #wrap .nav li.state div span {
-          width: 71px;
-          margin: -23px -1px 0px 0px;
-          right: 0px; }
-        #wrap .nav li.state div ul {
-          width: 33%;
-          float: left;
-          border-left: 1px solid #A7A9AC; }
-        #wrap .nav li.state div ul.noborder {
-          border-left: none; }
-    #wrap .nav li.state:hover div {
-      left: 156px; }
     #wrap .nav li ul li {
       float: none;
       margin: 0px;
@@ -432,7 +340,7 @@ body:before {
       height: 27px;
       background-color: transparent;
       border: none; }
-      #wrap .nav li ul li input {
+    #wrap .nav li ul li input {
         opacity: 0;
         filter: alpha(opacity=0);
         height: 15px;
@@ -443,7 +351,7 @@ body:before {
         margin: 10px 4px 0px 18px;
         z-index: 20;
         position: relative; }
-      #wrap .nav li ul li label {
+    #wrap .nav li ul li label {
         display: inline;
         font-size: 12px;
         color: #575759;
@@ -456,7 +364,7 @@ body:before {
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box; }
-      #wrap .nav li ul li input[type=checkbox]:checked ~ label {
+    #wrap .nav li ul li input[type=checkbox]:checked ~ label {
         background: #d8d8d8 url(../img/checked-box3.png) no-repeat 18px 9px; }
     #wrap .nav li ul li:hover {
       -webkit-box-shadow: none;
@@ -470,17 +378,17 @@ body:before {
       float: left; }
     #wrap .nav li ul div:first-child li:first-child {
       margin-bottom: 25px; }
- 
+	#wrap .full-width {
+		max-width: 1240px;
+		padding: 0px; }
+			
 		
-		#wrap .full-width {
-  max-width: 1240px;
-  padding: 0px; }
-.content { }
-.content p {
-    font: 14px Arial,Helvetica,sans-serif;
-    color: #58595b;
-    margin-top: 0px;
-    line-height: 1.8; }
+	.content { }
+	.content p {
+		font: 14px Arial,Helvetica,sans-serif;
+		color: #58595b;
+		margin-top: 0px;
+		line-height: 1.8; }
 
 	
 leadCount {
@@ -576,14 +484,16 @@ leadLink:active {
 }
 
 
-
+/* Header Nav */
  #wrap #header .nav {
-    padding: 0px 0px 0px 0px;
+    padding-top: 28px;
     margin: 0;
     list-style: none;
     height: 35px;
     display: inline-block;
-    float: right; }
+    float: right;
+    max-width: 734px;
+	}
   #wrap #header .nav a {
     display: block;
     width: auto;
@@ -597,21 +507,10 @@ leadLink:active {
   #wrap #header .nav li {
     float: right;
     margin: 0px 0px 0px 8px; }
-  #wrap #header .nav li:first-child {}
-	.row {
-  max-width: 1240px;
-  min-width: 753px;
-  margin: 0px -12px 0px 165px;
-  padding: 0px 20px;
-  min-height: 5px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-	
   
   
-  /* SIDENAV */
-    .sideNav {
+/* SIDENAV */
+.sideNav {
     padding: 0;
     margin: 0px 0px 0px 0px;
     list-style: none;
@@ -624,16 +523,35 @@ leadLink:active {
         label {
             max-width: 197px;
         }
-    }*/ }
-    .sideNav a {
+    }*/
+}
+.sideNav a {
+	box-shadow: 0 0 2px #606060;
+    display: block;
+    width: 134px;
+	height: 67px;
+	padding: 15px 36px 8px 15px;
+    color: #FFFFFF;
+	text-shadow: 1px 1px 3px #303030;
+    font: 12px Arial,Helvetica,sans-serif;
+	font-weight: bold;
+    text-decoration: none;
+	letter-spacing: 1px;
+	word-spacing: 2px;
+}
+	.sideNav a:hover {
       display: block;
-      width: 127px;
+      width: 134px;
 	  height: 67px;
 	  padding: 15px 36px 8px 15px;
-      color: #575759;
+      color: #FFFFFF;
+	  text-shadow: 1px 1px 3px #000000;
       font: 12px Arial,Helvetica,sans-serif;
+	  font-weight: bold;
       text-decoration: none;
-      border: 1px solid #A7A9AC; }
+	  letter-spacing: 1px;
+	  word-spacing: 2px;
+	}
     .sideNav li.clear a {
       width: 90px;
       height: 24px;
@@ -645,9 +563,11 @@ leadLink:active {
       text-decoration: none;
       border: none;
       background: transparent url(../img/clear-button.png) no-repeat;
-      text-align: center; }
+      text-align: center;
+	}
     .sideNav li.clear a:hover {
-      background: transparent url(../img/clear-button-hover.png); }
+      background: transparent url(../img/clear-button-hover.png);
+	}
     .sideNav a.closebutton {
       padding: 0px;
       color: #575759;
@@ -662,7 +582,8 @@ leadLink:active {
       position: absolute;
       bottom: -20px;
       right: -15px;
-      float: right; }
+      float: right;
+	}
     .sideNav a.hasSelections {
       border: 1px solid #FF0000; }
     .sideNav li {
@@ -670,9 +591,10 @@ leadLink:active {
       margin-right: 6px; }
     .sideNav li:hover {
       background-color: #f0f0f0;
-      -webkit-box-shadow: 0px 4px 9px 3px rgba(0, 0, 0, 0.2);
-      box-shadow: 0px 4px 9px 3px rgba(0, 0, 0, 0.2);
-      padding-bottom: 0px; }
+      -webkit-box-shadow: 5px 5px rgba(0, 0, 0, 0.5);
+      box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+      padding-bottom: 0px;
+	  }
     .sideNav li.clear:hover {
       -webkit-box-shadow: none;
       box-shadow: none; }
@@ -725,63 +647,7 @@ leadLink:active {
       position: relative; }
     .sideNav li.right:hover ul {
       right: 0px; }
-    .sideNav li ul.md {
-      width: 490px; }
-    .sideNav li.inv-country {
-      width: 141px; }
-    .sideNav li.inv-country div {
-        width: 141px; }
-    .sideNav li.inv-country div span {
-          width: 139px; }
-    .sideNav li.sector {
-      width: 80px; }
-    .sideNav li.sector div {
-        width: 516px; }
-    .sideNav li.sector div span {
-          width: 78px; }
-    .sideNav li.sector div ul {
-          width: 50%;
-          float: left;
-          border-left: 1px solid #A7A9AC; }
-    .sideNav li.sector div ul label {
-            width: 100%; }
-    .sideNav li.sector div ul.noborder {
-          border-left: none; }
-    .sideNav li.function {
-      width: 92px; }
-    .sideNav li.function div {
-        width: 280px; }
-    .sideNav li.function div span {
-          width: 90px; }
-    .sideNav li.revenue {
-      width: 146px; }
-    .sideNav li.revenue div {
-        width: 232px; }
-    .sideNav li.revenue div span {
-          width: 144px; }
-    .sideNav li.years {
-      width: 69px; }
-    .sideNav li.years div {
-        width: 105px; }
-    .sideNav li.years div span {
-          width: 67px; }
-    .sideNav li.state {
-      width: 73px; }
-    .sideNav li.state div {
-        width: 495px; }
-    .sideNav li.state div span {
-          width: 71px;
-          margin: -23px -1px 0px 0px;
-          right: 0px; }
-    .sideNav li.state div ul {
-          width: 33%;
-          float: left;
-          border-left: 1px solid #A7A9AC; }
-    .sideNav li.state div ul.noborder {
-          border-left: none; }
-    .sideNav li.state:hover div {
-      left: 156px; }
-    .sideNav li ul li {
+   .sideNav li ul li {
       float: none;
       margin: 0px;
       display: block;
@@ -824,6 +690,78 @@ leadLink:active {
     .sideNav li ul.sm div {
       width: 100%;
       float: left; }
-   .sideNav li ul div:first-child li:first-child {
+    .sideNav li ul div:first-child li:first-child {
       margin-bottom: 25px; }
- 
+	.sideNav  #sideNav1 {
+		background-color: #EFDFBB;
+	}
+	.sideNav #sideNav2 {
+		background-color: #9EBEA6;
+	}
+	.sideNav #sideNav3 {
+		background-color: #335D6A;
+	}
+	.sideNav #sideNav4 {
+		background-color: #7A8A7F;
+	}
+	.sideNav #sideNav5 {
+		background-color: #FF8E27;
+	}
+
+	#bidsLogo {
+	height: 100px;
+	width: auto;
+	padding-bottom: 10px !important;
+	padding-top: 8px !important;
+}
+
+/* Metrics Info Boxes */
+.overlay{
+    background:transparent url(../img/overlay.png) repeat top left;
+    position:fixed;
+    top:0px;
+    bottom:0px;
+    left:0px;
+    right:0px;
+    z-index:100;
+}
+
+.box{
+    position:fixed;
+    top:-200px;
+    left:30%;
+    right:30%;
+    background-color:#fff;
+    color:#7F7F7F;
+    padding:20px;
+    border:2px solid #ccc;
+    -moz-border-radius: 20px;
+    -webkit-border-radius:20px;
+    -khtml-border-radius:20px;
+    -moz-box-shadow: 0 1px 5px #333;
+    -webkit-box-shadow: 0 1px 5px #333;
+    z-index:101;
+}
+a.boxclose{
+    float:right;
+    width:26px;
+    height:26px;
+    background:transparent url(../img/cancel.png) repeat top left;
+    margin-top:-30px;
+    margin-right:-30px;
+    cursor:pointer;
+}
+.box h1{
+    border-bottom: 1px dashed #7F7F7F;
+    margin:-20px -20px 0px -20px;
+    padding:10px;
+    background-color:#FFEFEF;
+    color:#EF7777;
+    -moz-border-radius:20px 20px 0px 0px;
+    -webkit-border-top-left-radius: 20px;
+    -webkit-border-top-right-radius: 20px;
+    -khtml-border-top-left-radius: 20px;
+    -khtml-border-top-right-radius: 20px;
+}
+	
+	
