Metric CSS updates

--- a/css/bids.css
+++ b/css/bids.css
@@ -791,7 +791,7 @@ leadLink:active {
 
 .sideNavTextP {
 	font: 12px Arial,Helvetica,sans-serif;
-	margin: 8px 10px 0px 10px; 
+	margin: 10px; 
 	text-align: left;
 }  
 
